    * Add Sword + Blast Protection = shoot fireball (right-click)
    * Remove Sword + Flame = lit path (sorry, doesn't work in 1.2+)
    * Remove Axe + Flame II, Pickaxe + Flame II, Shovel + Flame II (see above)
    * Add configurable duration and amplifier to Axe + Aqua Affinity = slowness effect
    * Add configurable trunk width and two extra block IDs to Axe + Power = fell tree
    * Add support for chopping down RP2/IC2 Rubbertrees with Axe + Power = fell tree
    * Add configurable velocity multipler to Boots + Power = witch's broom
    * Add configurable Y velocity to Boots + Punch = hover jump
    * Nerf Boots + Punch = hover jump, now jumps 0.7 instead of 1.0 by default
    * Add configurable range and duration to Bow + Aqua Affinity = freeze
    * Add configurable range and duration to Bow + Bane of Arthropods = poison
    * Improve Bow + Efficiency = instant shoot, now cannot pickup the shot arrows
    * Add configurable power to Bow + Fire Aspect = fiery explosions
    * Fix Sword + Infinity, now damages item on use

2012-03-13  0.8.2
    * Add Sword + Punch = knock out of hand (right-click player)
    * Add Sword + Fortune = pickpocket (right-click player)
    * Add Sword + Infinity = selective invisibility (right-click player)
    * Add Sword + Respiration = banhammer (1=kick, 2+=temp ban)
    * Add Chestplate + Punch = brass knuckles (more damage with fists)
    * Add Chestplate + Respiration = fish mode (no damage in water)
    * Add Leggings + Knockback = tackle (more damage when sprinting)
    * Add support for custom items from PlasticCraft, Forestry, Mo' Foods mods in default config
    * Enhance Hoe + Fire Protection = sensor, now also displays player information
    * Fix Sword + Silk Touch = capture creating invalid spawn eggs on non-standard mobs
    * Update to 1.1-R8

2012-02-25  0.7.5
    * Add Bow + Feather Falling II = grapple hook (hold Shift to hang on)